tests/ui/extenv/extenv-not-defined-default.stderr
error: environment variable `CARGO__HOPEFULLY_NOT_DEFINED__` not defined at compile time
  --> $DIR/extenv-not-defined-default.rs:2:5
   |
LL |     env!("CARGO__HOPEFULLY_NOT_DEFINED__");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this macro invocation
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `env!`
   |
   = help: Cargo sets build script variables at run time. Use `std::env::var("CARGO__HOPEFULLY_NOT_DEFINED__")` instead

error: aborting due to previous error

